Closed
Bug 1409643
Opened 8 years ago
Closed 8 years ago
Firefox failed to prompt after running gUM desktop sharing (regression)
Categories
(Core :: WebRTC: Audio/Video, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla58
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox56 | --- | wontfix |
| firefox57 | --- | wontfix |
| firefox58 | - | fixed |
People
(Reporter: mchiang, Assigned: mchiang)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
STRs:
1. Set dom.ipc.processCount to 1 in about:config
2. Go to https://mozilla.github.io/webrtc-landing/gum_test.html and press the button screen
3. Open another tab, repeat step 2.
Expected behavior:
Firefox shows the permission prompt.
Actual behavior:
No prompt is shown.
| Assignee | ||
Updated•8 years ago
|
| Assignee | ||
Comment 1•8 years ago
|
||
mozregression result point to the bug 1371000.
Updated•8 years ago
|
Rank: 25
Priority: -- → P1
| Assignee | ||
Comment 2•8 years ago
|
||
I can reproduce this bug on Windows 7 and Windows 10.
Different from bug 1399413, this bug occurs when the 2nd gUM desktop sharing is runned by the same content process as the 1st gUM desktop sharing.
When the issue occurs, VideoCapture thread stucks at Windows api EnumWindows [1][2] and never returns.
[1] http://searchfox.org/mozilla-central/rev/dca019c94bf3a840ed7ff50261483410cfece24f/media/webrtc/trunk/webrtc/modules/desktop_capture/window_capturer_win.cc#132
[2] https://msdn.microsoft.com/zh-tw/library/windows/desktop/ms633497(v=vs.85).aspx
OS: Windows 7 → Windows
| Assignee | ||
Comment 3•8 years ago
|
||
Actually, VideoCapture thread hangs at winapi GetWindowTextLength/ [1]
[1] http://searchfox.org/mozilla-central/rev/dca019c94bf3a840ed7ff50261483410cfece24f/media/webrtc/trunk/webrtc/modules/desktop_capture/window_capturer_win.cc#35
I move the snippet calling GetWindowTextLength and the hang sympton just gone.
Updated•8 years ago
|
Rank: 25 → 15
Priority: P1 → P2
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 5•8 years ago
|
||
It seems a winapi bug.
Calling GetWindowTextLength() with an invisible window handle would cause hang.
Although I don't find any discussion about this.
| Assignee | ||
Updated•8 years ago
|
Attachment #8919692 -
Attachment is obsolete: true
Comment 6•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8920077 [details]
Bug 1409643 - call GetWindowTextLength() for visble window only.
https://reviewboard.mozilla.org/r/191084/#review198292
Attachment #8920077 -
Flags: review?(jib) → review+
Updated•8 years ago
|
Assignee: nobody → mchiang
Comment 7•8 years ago
|
||
(In reply to Munro Mengjue Chiang [:mchiang] from comment #0)
> Actual behavior:
> No prompt is shown.
To clarify, "no prompt" means that A) nothing happened, or B) prompt was bypassed and sharing worked? I assume A.
Updated•8 years ago
|
Keywords: regression
Updated•8 years ago
|
status-firefox56:
--- → wontfix
status-firefox57:
--- → wontfix
status-firefox58:
--- → affected
tracking-firefox58:
--- → ?
| Assignee | ||
Comment 8•8 years ago
|
||
(In reply to Jan-Ivar Bruaroey [:jib] (needinfo? me) from comment #7)
> (In reply to Munro Mengjue Chiang [:mchiang] from comment #0)
> > Actual behavior:
> > No prompt is shown.
>
> To clarify, "no prompt" means that A) nothing happened, or B) prompt was
> bypassed and sharing worked? I assume A.
Yes, VideoCapture thread will hang, and anything behind will not happen.
Pushed by mchiang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ad3d44a5fa1e
call GetWindowTextLength() for visble window only. r=jib
Comment 10•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Updated•8 years ago
|
status-firefox-esr52:
--- → unaffected
Version: unspecified → 56 Branch
Updated•8 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•