Bug 1409643 - call GetWindowTextLength() for visble window only. r=jib

MozReview-Commit-ID: CKl1mwV7YHw